Add dist to gitignore Add index.scss

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <title>Yew Boilerplace</title>
-
+        
+        <link data-trunk rel="scss" href="./assets/css/index.scss"/>
         <link data-trunk href="./assets/css/tailwindcss.css" rel="css" />
     </head>
 
